@@ -395,6 +395,7 @@ Kip Lehman
 Joerg Lehmann
 Luke Kenneth Casson Leighton
 Marc-Andre Lemburg
+John Lenton
 Mark Levinson
 William Lewis
 Robert van Liere
